--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,9 +1,6 @@
-👋 Hello dear {{ username }}
+Hello dear <b>{{ username }}</b>👋
+This is <b><a href="https://t.me/konnektive_crm_bot">CRM Bot</a> for Unabis</b>
 
-My name is <b><a href="https://t.me/december1618">Oleg</a></b>
-
-MY CONTACTS IN THE WEB:
-
-<b><a href="https://www.instagram.com/ollleg1618">Instagram</a></b>
-<b><a href="https://t.me/december1618">Telegram december1618</a></b>
-<b><a href="anticovid19tg@gmail.com">EMAIL moskvichovoleg@gmail.com</a></b>
+Site: <b><a href="https://unabis.com">unabis.com</a></b>
+Telegram: <b><a href="https://t.me/december1618">december1618</a></b>
+Email: <b><a href="mailto:anticovid19tg@gmail.com">support@unabis.com</a></b>
